# drone-ag-segmentation

./: .gitignore  Makefile  README.md  params.yaml  pyproject.toml
src/segmentation/: __init__.py
src/segmentation/models/: unet.py
src/segmentation/scripts/: evaluation.py  predict.py  prepare_segmentation_dataset.py  train.py
src/segmentation/utils/: load_params.py  sample_dataset.py  train_test_split.py  view_masks.py
