
[tool.poetry]
name = "drone-ag-segmentation"
version = "0.1.0"
description = ""
authors = ["dhuntcode <deanhunt1986@gmail.com>"]
packages = [
    { include = "segmentation", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
dvc = "^2.58.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
pydantic = "^1.10.8"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
